--- a/index.haml
+++ b/index.haml
@@ -2,6 +2,7 @@
 %html{:lang => "en"}
   %head
     %meta{:charset => "UTF-8"}/
+    %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     %title KickArts | Auckland's Comprehensive ArtShow
     %link{:href => "css/reset.css", :rel => "stylesheet"}/
     %link{:href => "css/main.css", :rel => "stylesheet"}/
@@ -12,6 +13,7 @@
     %script{:src => "js/min/match-height.js", :type => "text/javascript"}
     %script{:src => "js/min/app-min.js"}
   %body
+    %img.bg{:src => "img/skytower-small.jpg", :alt => ""}/
     .top-bar.is-hidden
       &nbsp;
     %nav.is-hidden
