--- a/css/main.scss
+++ b/css/main.scss
@@ -191,7 +191,7 @@ header {
   }
 }
 .box-col-2 {
-  @include column(1/2, $cycle: 2);
+  @include column(1/2, $cycle: 2, $uncycle: 1);
   @include breakpoint($small) {
     @include stack();
     margin-top: 1rem;
