--- a/index.haml
+++ b/index.haml
@@ -289,7 +289,7 @@
     #latest-show
     %recent-shows
     %footer
-      .box
+      .box.box-padding-5
         .box-col-2
           .card-title.green-sea
             %h3
