adds margin to jeet grid system for team boxex

--- a/css/main.css
+++ b/css/main.css
@@ -343,6 +343,7 @@ header {
   width: 48.5%;
   margin-left: 0%;
   margin-right: 3%;
+  margin-bottom: 1.8rem;
   background: whitesmoke;
   box-shadow: -2px -1px 33px 3px rgba(56, 56, 56, 0.52); }
   .box-col-2:before, .box-col-2:after {
