--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@
   background-size: cover;
   background-position: top right;
   background-repeat: no-repeat;
-  height: 100%;
+  height: 100vh;
   width: 100%; }
 
 .container {
