deletes archive from navbar, renames latest eps to episodes and changes nav bar media query

--- a/index.haml
+++ b/index.haml
@@ -34,16 +34,13 @@
                 .fa.fa-home
             %li
               %a.menu-link.episodes-link{:href => "#latest-show"}
-                Latest shows
+                Episodes
             %li
               %a.menu-link.our-team-link{:href => "#our-team"}
                 Our Team
             %li
               %a.menu-link.contact-link{:href => "#contact"}
                 Contact us
-            %li
-              %a.menu-link{:href => "#"}
-                Archive
             %li
               %a.menu-link{:href => "#"}
                 .fa.fa-search
