--- a/css/main.css
+++ b/css/main.css
@@ -446,6 +446,177 @@ iframe {
   z-index: 0;
   pointer-events: none; }
 
+#dd, #dd3 {
+  z-index: 6;
+  font-family: "Exo 2", sans-serif; }
+
+#dd2, #dd4 {
+  z-index: 5;
+  margin-top: .5rem;
+  margin-bottom: 1.5rem;
+  font-family: "Exo 2", sans-serif; }
+
+.wrapper-dropdown-1 {
+  position: relative;
+  width: 15rem;
+  padding: 10px;
+  margin-left: 1rem;
+  background: #fff;
+  color: #888;
+  outline: none;
+  cursor: pointer;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15); }
+  .wrapper-dropdown-1:after {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    right: 16px;
+    top: 50%;
+    margin-top: -6px;
+    border-width: 6px 0 6px 6px;
+    border-style: solid;
+    border-color: transparent #955CA5; }
+
+.wrapper-dropdown-1 .dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background: #fff;
+  list-style: none;
+  font-weight: normal;
+  opacity: 0;
+  pointer-events: none; }
+
+.wrapper-dropdown-1 .dropdown li a {
+  display: block;
+  text-decoration: none;
+  color: #9e9e9e;
+  padding: 10px 20px; }
+
+.wrapper-dropdown-1 .dropdown li:hover a {
+  background: whitesmoke; }
+
+.wrapper-dropdown-1.active .dropdown {
+  opacity: 1;
+  pointer-events: auto; }
+
+.wrapper-dropdown-1.active:after {
+  border-color: #9bc7de transparent;
+  border-width: 6px 6px 0 6px;
+  margin-top: -3px; }
+
+form {
+  width: 15rem;
+  margin-left: 1rem; }
+
+fieldset {
+  border: none;
+  position: relative;
+  font-family: 'Exo 2' sans-serif; }
+
+input, select {
+  border: none;
+  padding: 1rem 1rem .8rem 1rem;
+  width: 15rem;
+  font-size: .9rem;
+  font-family: "Exo 2", sans-serif;
+  padding-bottom: .5rem;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15); }
+  input:focus, select:focus {
+    outline: none;
+    border-bottom: .3rem solid #955CA5; }
+
+input + label {
+  display: block;
+  cursor: text;
+  color: #777;
+  transition: .15s ease-out all;
+  position: absolute;
+  top: 1.2rem;
+  left: .9rem; }
+
+input:focus + label {
+  top: .3em;
+  left: 1.45em;
+  font-size: .7em;
+  font-weight: bold;
+  color: #955CA5;
+  transition: .15s ease-out all; }
+
+.stay {
+  top: .3em;
+  left: 1.45em;
+  font-size: .7em;
+  font-weight: bold;
+  color: #955CA5;
+  transition: .15s ease-out all; }
+
+.search-btn {
+  background-color: #eebaff;
+  box-shadow: 0px -1px 6px 0px rgba(56, 56, 56, 0.52);
+  margin-top: .5rem;
+  margin-bottom: 1.5rem;
+  display: inline-block;
+  cursor: pointer;
+  color: #fff;
+  font-family: 'Exo 2' sans-serif;
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: bold;
+  padding: .5rem 2rem;
+  text-decoration: none;
+  transition: all 500ms ease-out; }
+  .search-btn:hover {
+    background-color: #955CA5;
+    color: #fff; }
+  .search-btn:active {
+    position: relative;
+    top: 1px; }
+
+h2 {
+  font-family: "Exo 2", sans-serif;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 0.1rem;
+  color: #444;
+  padding: 1rem; }
+
+.box-col-3-no-bg {
+  *zoom: 1;
+  float: left;
+  clear: none;
+  text-align: inherit;
+  width: 33.3333333333%;
+  margin-left: 0%;
+  margin-right: 0%;
+  background: whitesmoke; }
+  .box-col-3-no-bg:before, .box-col-3-no-bg:after {
+    content: '';
+    display: table; }
+  .box-col-3-no-bg:after {
+    clear: both; }
+  .box-col-3-no-bg:last-child {
+    margin-right: 0%; }
+  @media (max-width: 799px) {
+    .box-col-3-no-bg {
+      display: block;
+      clear: both;
+      float: none;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto; }
+      .box-col-3-no-bg:first-child {
+        margin-left: auto; }
+      .box-col-3-no-bg:last-child {
+        margin-right: auto; } }
+  .box-col-3-no-bg p {
+    padding: .9rem;
+    line-height: 1.3rem;
+    font-size: .85rem; }
+
 .entry {
   margin: 5rem auto;
   *zoom: 1;
@@ -714,3 +885,7 @@ footer p {
 @media only screen and (max-width: 500px) {
   .cover {
     height: 20rem; } }
+@media only screen and (max-width: 999px) {
+  .nav-center {
+    padding-left: 1rem;
+    padding-right: 1rem; } }
