--- a/css/main.scss
+++ b/css/main.scss
@@ -280,10 +280,30 @@ iframe {
 
 
 
-//TEAM
+//SEARCH BOX
 
-
-
+@import 'search';
+h2 {
+  font-family: $font-h;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 0.1rem;
+  color: #444;
+  padding: 1rem;
+}
+.box-col-3-no-bg {
+  @include column(1/3, $gutter: 0);
+  @include breakpoint($small) {
+    @include stack();
+  }
+  background: whitesmoke;
+  p{
+    padding: .9rem;
+    line-height: 1.3rem;
+    font-size: .85rem;
+  }
+}
 //ENTRIES
 
 .entry {
