--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -113,3 +113,12 @@
     height: 20rem;
   }
 }
+
+//At 960px the boxes fills the width of the browser completerly. This media query ensures that the nav logo and menu has more padding on the side.
+
+@media only screen and (max-width: 999px) {
+  .nav-center {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
