--- a/index.haml
+++ b/index.haml
@@ -78,13 +78,13 @@
           .box-col-3
             .card-title.purple
               %h3
-                Archive
+                Episodes
               .card-icon
                 .fa.fa-archive
             .card-body.box-height
               %p If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
             .card-action
-              %a{:href => "#"}Browse archive
+              %a{:href => "#"}Browse episodes
         #latest-show
           %recent-shows
       #our-team-section
@@ -236,6 +236,104 @@
                 %li
                   %a{:href => "https://twitter.com/catherinegangel", :target => '_blank'}
                     .fa.fa-twitter
+      #search-section
+        .box.box-padding-5
+          .card-title.purple
+            %h3
+              Search
+            .card-icon
+              .fa.fa-search
+          .card-body
+            .box-col-3-no-bg.box-height
+              %h2
+                Year
+              #dd.wrapper-dropdown-1{:tabindex => "1"}
+                %span From
+                %ul.dropdown{:tabindex => "1"}
+                  %li
+                    %a{:href => "#"} 2015
+                  %li
+                    %a{:href => "#"} 2014
+                  %li
+                    %a{:href => "#"} 2013
+                  %li
+                    %a{:href => "#"} 2012
+              #dd2.wrapper-dropdown-1{:tabindex => "2"}
+                %span To
+                %ul.dropdown{:tabindex => "2"}
+                  %li
+                    %a{:href => "#"} 2015
+                  %li
+                    %a{:href => "#"} 2014
+                  %li
+                    %a{:href => "#"} 2013
+                  %li
+                    %a{:href => "#"} 2012
+            .box-col-3-no-bg.box-height
+              %h2
+                Month
+              #dd3.wrapper-dropdown-1{:tabindex => "3"}
+                %span From
+                %ul.dropdown{:tabindex => "3"}
+                  %li
+                    %a{:href => "#"} January
+                  %li
+                    %a{:href => "#"} February
+                  %li
+                    %a{:href => "#"} March
+                  %li
+                    %a{:href => "#"} April
+                  %li
+                    %a{:href => "#"} May
+                  %li
+                    %a{:href => "#"} June
+                  %li
+                    %a{:href => "#"} July
+                  %li
+                    %a{:href => "#"} August
+                  %li
+                    %a{:href => "#"} September
+                  %li
+                    %a{:href => "#"} October
+                  %li
+                    %a{:href => "#"} November
+                  %li
+                    %a{:href => "#"} December
+              #dd4.wrapper-dropdown-1{:tabindex => "4"}
+                %span To
+                %ul.dropdown{:tabindex => "4"}
+                  %li
+                    %a{:href => "#"} January
+                  %li
+                    %a{:href => "#"} February
+                  %li
+                    %a{:href => "#"} March
+                  %li
+                    %a{:href => "#"} April
+                  %li
+                    %a{:href => "#"} May
+                  %li
+                    %a{:href => "#"} June
+                  %li
+                    %a{:href => "#"} July
+                  %li
+                    %a{:href => "#"} August
+                  %li
+                    %a{:href => "#"} September
+                  %li
+                    %a{:href => "#"} October
+                  %li
+                    %a{:href => "#"} November
+                  %li
+                    %a{:href => "#"} December
+            .box-col-3-no-bg.box-height
+              %h2
+                Words
+              %form
+                %fieldset
+                  %input.name{:name => "", :type => "text"}/
+                  %label.search{:for => "name"} Type words
+                %a.search-btn{:href => "#"} Search
       #contact-section
         .padding-top
         #contact
