adds some text in search box

--- a/css/main.scss
+++ b/css/main.scss
@@ -250,6 +250,7 @@ header {
 }
 .card-body {
   border-bottom: .1rem solid #CCC;
+  background-color: whitesmoke;
   ul {
     list-style-type: square;
     font-size: 0.85rem;
