--- a/css/main.css
+++ b/css/main.css
@@ -422,7 +422,8 @@ header {
   background-color: #E64D3C; }
 
 .card-body {
-  border-bottom: .1rem solid #CCC; }
+  border-bottom: .1rem solid #CCC;
+  background-color: whitesmoke; }
   .card-body ul {
     list-style-type: square;
     font-size: 0.85rem;
