--- a/css/main.scss
+++ b/css/main.scss
@@ -284,6 +284,9 @@ iframe {
 //SEARCH BOX
 
 @import 'search';
+.search-dscrp {
+  padding: 1rem;
+}
 h2 {
   font-family: $font-h;
   font-size: 1.2rem;
