--- a/index.haml
+++ b/index.haml
@@ -244,7 +244,7 @@
             .card-icon
               .fa.fa-search
           .card-body
-            %p You can search by year, by month or by typing some words. You can use all three criteria at once or try your luck with only one criteria.
+            %p.search-dscrp You can search by year, by month or by typing some words. You can use all three criteria at once or try your luck with only one criteria.
             .box-col-3-no-bg.box-height
               %h2
                 Year
