adss js serach library

--- a/index.haml
+++ b/index.haml
@@ -438,6 +438,7 @@
             %li
               %a{:href => "https://twitter.com/KickArtsRadio", :target => '_blank'}
                 .fa.fa-twitter
+  %script{:src => "js/min/defiance.js"}                
   %script{:src => "raw.tag", :type => "riot/tag"}
   %script{:src => "recent-shows.tag", :type => "riot/tag"}
   %script{:src => "episode.tag", :type => "riot/tag"}
