--- a/index.haml
+++ b/index.haml
@@ -19,7 +19,7 @@
         &nbsp;
       %nav.is-hidden
         .nav-center
-          %a{:href => "#header"}
+          %a{:href => "#home"}
             %h1
               .nav-logo
                 %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
@@ -30,10 +30,10 @@
           %span.menu-button.menu-open
           %ul
             %li
-              %a.menu-link.home-link{:href => "#header"}
+              %a.menu-link.home-link{:href => "#home"}
                 .fa.fa-home
             %li
-              %a.menu-link.episodes-link{:href => "#latest-show"}
+              %a.menu-link.episodes-link{:href => "#episodes"}
                 Episodes
             %li
               %a.menu-link.our-team-link{:href => "#our-team"}
@@ -42,9 +42,9 @@
               %a.menu-link.contact-link{:href => "#contact"}
                 Contact us
             %li
-              %a.menu-link{:href => "#"}
+              %a.menu-link.search-link{:href => "#search"}
                 .fa.fa-search
-      %header#header
+      %header#home
         %h1.logo
           %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
           .logo-title
@@ -84,11 +84,11 @@
             .card-body.box-height
               %p If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
             .card-action
-              %a{:href => "#"}Browse episodes
-        #latest-show
-          %recent-shows
+              %a{:href => "#episodes"}Browse episodes
+      #episodes-section
+        #episodes
+        %recent-shows
       #our-team-section
-        .padding-top
         #our-team
         .box.box-padding-5
           .box-col-2
@@ -237,6 +237,7 @@
                   %a{:href => "https://twitter.com/catherinegangel", :target => '_blank'}
                     .fa.fa-twitter
       #search-section
+        #search
         .box.box-padding-5
           .card-title.purple
             %h3
@@ -334,9 +335,8 @@
                 %fieldset
                   %input.name{:name => "", :type => "text"}/
                   %label.search{:for => "name"} Type words
-                %a.search-btn{:href => "#"} Search
+                %a.search-btn.search-link{:href => "#search"} Search
       #contact-section
-        .padding-top
         #contact
         .box.contact-box.box-padding-5
           .box-col-2
@@ -401,7 +401,7 @@
               %p
                 Find out who is behind the microphone, their background, story and juicy gossip... you wish.
             .card-action
-              %a{:href => "#out-team"}More info
+              %a.our-team-link{:href => "#our-team"}More info
           .box-col-2
             .card-title.alizarin
               %h3
@@ -414,7 +414,7 @@
             .card-action
               %ul
                 %li
-                  %a{:href => "#contact"}More info
+                  %a.contact-link{:href => "#contact"}More info
                 %li
                   %a{:href => "mailto:kickarts1@gmail.com"}
                     .fa.fa-envelope-o
@@ -439,7 +439,7 @@
             %li
               %a{:href => "https://twitter.com/KickArtsRadio", :target => '_blank'}
                 .fa.fa-twitter
-  %script{:src => "js/min/defiance.js"}                
+  %script{:src => "js/min/defiance.js"}
   %script{:src => "raw.tag", :type => "riot/tag"}
   %script{:src => "recent-shows.tag", :type => "riot/tag"}
   %script{:src => "episode.tag", :type => "riot/tag"}
