removes class for setting active nav on other buttons

--- a/index.haml
+++ b/index.haml
@@ -335,7 +335,7 @@
                 %fieldset
                   %input.name{:name => "", :type => "text"}/
                   %label.search{:for => "name"} Type words
-                %a.search-btn.search-link{:href => "#search"} Search
+                %a.search-btn{:href => "#search"} Search
       #contact-section
         #contact
         .box.contact-box.box-padding-5
@@ -401,7 +401,7 @@
               %p
                 Find out who is behind the microphone, their background, story and juicy gossip... you wish.
             .card-action
-              %a.our-team-link{:href => "#our-team"}More info
+              %a{:href => "#our-team"}More info
           .box-col-2
             .card-title.alizarin
               %h3
@@ -414,7 +414,7 @@
             .card-action
               %ul
                 %li
-                  %a.contact-link{:href => "#contact"}More info
+                  %a{:href => "#contact"}More info
                 %li
                   %a{:href => "mailto:kickarts1@gmail.com"}
                     .fa.fa-envelope-o
